# aws-agentcore-chat-bot

./: .env.example  CHANGELOG.md  COMPLETION_CHECKLIST.md  COMPLETION_SUMMARY.md  NOVA_IMPLEMENTATION_SUMMARY.md  NOVA_QUICK_REFERENCE.md  NOVA_QUICK_START.md  README.md  SOURCE_AGENTS_COMPLETE.md  THREAD_NAME_FEATURE_SUMMARY.md  THREAD_NAME_QUICK_REFERENCE.md  demo_thread_names.py  diagnose_kb_integration.py  diagnose_ollama.py  pyproject.toml  setup_nova_pro.ps1  test_agent_client_async.py  test_agentcore_integration.py  test_agentcore_prompt.py  test_both_backends.py  test_kb_bedrock.py  test_kb_integration.py  test_logging.py  test_nova_connection.py  test_nova_integration.py  test_nova_performance.py  test_nova_pro.py  test_ollama.py  test_prompt_loader.py  test_response_split.py  test_strands_agent.py  test_thread_name_generation.py  verify_source_agents.py
docs/: AI_GENERATED_THREAD_NAMES.md  BEDROCK_KB_SETUP.md  BEFORE_AFTER.md  FIX_SUMMARY.md  KB_ARCHITECTURE.md  KB_QUICK_REFERENCE.md  LLM_PROVIDER_REFACTORING.md  NOVA_PRO_IMPLEMENTATION.md  NOVA_PRO_SETUP.md  NOVA_SETUP.md  SOURCE_AGENTS_IMPLEMENTATION.md  SOURCE_AGENTS_QUICKSTART.md  agentcore-kb-setup-guide.md  agentcore-knowledge-base-integration.md  agentcore-use.md  architecture.md  debugging-discord-messages.md  environment-variables-reference.md  kb-logging-enhancement.md  troubleshooting-kb-integration.md
examples/: README.md  agentcore_enhanced_example.py  agentcore_integration_example.py  discord_integration_example.py  strands_agent_integration.md  test_local_agent.py
scripts/: run_source_agents.py
(+41 files in other folders)
